fix tooltip layout bug and make sure tooltip is big enough for tables

--- a/css/graphic.less
+++ b/css/graphic.less
@@ -127,6 +127,7 @@ body {
 
 .tooltip-details {
     border: 2px solid @gray;
+    box-sizing: border-box;
     display: none;
     line-height: 1.1;
     position: absolute;
